@@ -86,6 +86,8 @@ Release 0.9.6
   class)
 - disable zen-cart request handling for shopping cart; use checkout helper in
   ZMShoppingCartController instead
+- improve zm_phpbb3 (and fix some minor things)
+- add user syncing to zm_wordpress
 
 Release 0.9.5.1
 - fix broken price filter in product search; b:#2689495
